Revision history for ExtUtils-Builder-Compiler

{{$NEXT}}
          - Use tempdir correctly in try_compile_run

0.020     2024-08-10 18:16:16+02:00 Europe/Brussels
          - Correctly pass lddlflags in Linker creation
          - Pass ld instead of cc to linker except on AIX

0.019     2024-08-05 21:04:22+02:00 Europe/Brussels
          - Revert critical breakage in try_compile_run

0.018     2024-08-05 16:00:45+02:00 Europe/Brussels
          - Add try_find_library_dirs_for
          - Fix find_libs_for to pass library correctly
          - Rename find_libs_for to find_libraries_for
          - Fix basename in try_compile_run

0.017     2024-08-04 20:57:12+02:00 Europe/Brussels
          - Fix missing prereq declarations
          - Remove superfluous debugging output in EUB::Conf

0.016     2024-08-01 12:55:40+02:00 Europe/Brussels
          - Add ExtUtils::Builder::Conf
          - Add typemap and hiertype arguments to parse-xs

0.015     2024-07-20 15:18:22+02:00 Europe/Brussels
          - Add exe_file helper to EU::B::Autodetect::C
          - Add missing argument in MSCV manifesting
          - Add directories to loadable_file/library_file/exe_file
          - Use parent instead of base

0.014     2024-07-17 01:30:56+02:00 Europe/Brussels
          - Correctly check os version with -iwithsysroot

0.013     2024-07-16 19:11:54+02:00 Europe/Brussels
          - Use -iwithsysroot on Mac for systemperl

0.012     2024-07-15 21:03:08+02:00 Europe/Brussels
          - Fix implicit mkdir in compile action
          - Added message to function actions

0.011     2024-07-14 16:57:11+02:00 Europe/Brussels
          - Depend on ExtUtils::Builder 0.007

0.010     2024-07-14 12:55:11+02:00 Europe/Brussels
          - Adapt to version argument in load_module

0.009     2024-07-02 19:10:19+02:00 Europe/Brussels
          - Eliminate references to no longer existing _libraries method

0.008     2024-06-28 12:36:56+02:00 Europe/Brussels