@@ -117,7 +117,7 @@ sub add_methods {
 			$target = $exe_file;
 		}
 
-		my $result = eval { $inner->materialize->run($target); 1 };
+		my $result = eval { $inner->materialize->run($target, quiet => 1 || $args{quiet}); 1 };
 
 		return !!0 if not $result;
 
@@ -256,6 +256,10 @@ Optional. If specified, pass extra flags to the compiler.
 =item extra_linker_flags => ARRAY
 
 Optional. If specified, pass extra flags to the linker.
+
+=item quiet => BOOL
+
+This makes C<try_compile_run> run quietly.
 
 =item define => STRING
 
